--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,3 @@
 Jonas Wielicki <j.wielicki@sotecware.net>
-Rene Kuettner <rene@bitkanal.net>
+René Küttner <rene@bitkanal.net>
 Leon Weber <leon@leonweber.de>
